--- a/template.yaml
+++ b/template.yaml
@@ -26,6 +26,8 @@ Parameters:
       - "true"
       - "false"
     Default: "false"
+  KmsKeyId:
+    Type: String
            
 Conditions:
   IsEmpty: !Equals [!Ref RecoveryPointArn, '']  
@@ -38,9 +40,10 @@ Resources:
     Properties:
       BackupPolicy:
         Status: DISABLED
-      Encrypted: !Ref Encrypted
       PerformanceMode: !Ref PerformanceMode
       ThroughputMode: bursting
+      Encrypted: !Ref Encrypted
+      KmsKeyId: !Ref KmsKeyId
   
   RecoveredEfs:
     Type: Custom::RecoveredEfs
@@ -51,6 +54,7 @@ Resources:
       RecoveryPoint: !Ref RecoveryPointArn
       PerformanceMode: !Ref PerformanceMode
       Encrypted: !Ref Encrypted
+      KmsKeyId: !Ref KmsKeyId
  
   FixingEfs:
     Type: Custom::FixingEfs
@@ -62,6 +66,7 @@ Resources:
       RecoveryPoint: !Ref RecoveryPointArn
       PerformanceMode: !Ref PerformanceMode
       Encrypted: !Ref Encrypted
+      KmsKeyId: !Ref KmsKeyId
        
   EfsStateMachine:
     Type: AWS::StepFunctions::StateMachine
@@ -112,6 +117,12 @@ Resources:
                                 "Variable": "$.Request.ResourceProperties.Encrypted",
                                 "StringEqualsPath": "$.Request.OldResourceProperties.Encrypted"
                               }
+                            },
+                            {
+                              "Not": {
+                                "Variable": "$.Request.ResourceProperties.KmsKeyId",
+                                "StringEqualsPath": "$.Request.OldResourceProperties.KmsKeyId"
+                              }
                             }
                           ]
                         }
@@ -144,6 +155,7 @@ Resources:
                 "Metadata": {
                   "file-system-id.$": "$.GetRecoveryPointRestoreMetadataResult.RestoreMetadata.file-system-id",
                   "Encrypted.$": "$.Request.ResourceProperties.Encrypted",
+                  "KmsKeyId.$": "$.Request.ResourceProperties.KmsKeyId",
                   "PerformanceMode.$": "$.Request.ResourceProperties.PerformanceMode",
                   "CreationToken.$": "$.GetRecoveryPointRestoreMetadataResult.RestoreMetadata.aws:backup:request-id",
                   "newFileSystem": "true"
@@ -316,6 +328,12 @@ Resources:
                               "Not": {
                                 "Variable": "$.Request.ResourceProperties.Encrypted",
                                 "StringEqualsPath": "$.Request.OldResourceProperties.Encrypted"
+                              }
+                            },
+                            {
+                              "Not": {
+                                "Variable": "$.Request.ResourceProperties.KmsKeyId",
+                                "StringEqualsPath": "$.Request.OldResourceProperties.KmsKeyId"
                               }
                             }
                           ]
