--- a/template.yaml
+++ b/template.yaml
@@ -164,7 +164,7 @@ Resources:
                       ]
                     }
                   ],
-                  "Next": "Choice lifecycle"
+                  "Next": "BuildLifecycleConfiguration (1)"
                 },
                 {
                   "Variable": "$.Request.RequestType",
@@ -172,6 +172,66 @@ Resources:
                   "Next": "DeleteFileSystem"
                 }
               ]
+            },
+            "BuildLifecycleConfiguration (1)": {
+              "Type": "Task",
+              "Resource": "arn:aws:states:::lambda:invoke",
+              "Parameters": {
+                "Payload": {
+                  "TransitionToIA.$": "$.Request.ResourceProperties.TransitionToIA",
+                  "TransitionToPrimaryStorageClass.$": "$.Request.ResourceProperties.TransitionToPrimaryStorageClass"
+                },
+                "FunctionName.$": "$.BuildLifecycleConfigurationLambdaName"
+              },
+              "Retry": [
+                {
+                  "ErrorEquals": [
+                    "Lambda.ServiceException",
+                    "Lambda.AWSLambdaException",
+                    "Lambda.SdkClientException"
+                  ],
+                  "IntervalSeconds": 2,
+                  "MaxAttempts": 6,
+                  "BackoffRate": 2
+                }
+              ],
+              "Next": "PutLifecycleConfiguration (1)",
+              "ResultPath": "$.BuildLifecycleConfigurationResult"
+            },
+            "PutLifecycleConfiguration (1)": {
+              "Type": "Task",
+              "Next": "Send success updated response",
+              "Parameters": {
+                "FileSystemId.$": "$.Request.PhysicalResourceId",
+                "LifecyclePolicies.$": "$.BuildLifecycleConfigurationResult.Payload"
+              },
+              "Resource": "arn:aws:states:::aws-sdk:efs:putLifecycleConfiguration",
+              "ResultPath": "$.LifecycleNoneResult"
+            },
+            "Send success updated response": {
+              "Type": "Task",
+              "Resource": "arn:aws:states:::lambda:invoke",
+              "Parameters": {
+                "FunctionName.$": "$.SendResponseLambdaName",
+                "Payload": {
+                  "Request.$": "$.Request",
+                  "ResponseStatus": "SUCCESS",
+                  "PhysicalResourceId.$": "$.Request.PhysicalResourceId"
+                }
+              },
+              "Retry": [
+                {
+                  "ErrorEquals": [
+                    "Lambda.ServiceException",
+                    "Lambda.AWSLambdaException",
+                    "Lambda.SdkClientException"
+                  ],
+                  "IntervalSeconds": 2,
+                  "MaxAttempts": 6,
+                  "BackoffRate": 2
+                }
+              ],
+              "End": true
             },
             "GetRecoveryPointRestoreMetadata": {
               "Type": "Task",
@@ -221,20 +281,20 @@ Resources:
                 {
                   "Variable": "$.DescribeRestoreJobResult.Status",
                   "StringEquals": "COMPLETED",
-                  "Next": "Transform arn to efs id"
+                  "Next": "ConvertArnToId"
                 }
               ],
               "Default": "Wait for job completed"
             },
-            "Transform arn to efs id": {
+            "ConvertArnToId": {
               "Type": "Task",
-              "Resource": "$.ArnToEfsIdLambdaArn",
+              "Resource": "arn:aws:states:::lambda:invoke",
               "Parameters": {
                 "Payload": {
                   "Arn.$": "$.DescribeRestoreJobResult.CreatedResourceArn"
-                }
+                },
+                "FunctionName.$": "$.ConvertArnToIdLambdaName"
               },
-              "ResultPath": "$.Request.PhysicalResourceId",
               "Retry": [
                 {
                   "ErrorEquals": [
@@ -247,86 +307,70 @@ Resources:
                   "BackoffRate": 2
                 }
               ],
-              "Next": "Choice lifecycle",
-              "OutputPath": "$.Payload.EfsId",
-              "Comment": "This function set Request.PhysicalResourceId to created filesystem id"
+              "Next": "BuildLifecycleConfiguration",
+              "ResultPath": "$.ConvertArnToIdResult"
             },
-            "Choice lifecycle": {
-              "Type": "Choice",
-              "Choices": [
-                {
-                  "And": [
-                    {
-                      "Variable": "$.Request.ResourceProperties.TransitionToIA",
-                      "StringEquals": "NONE"
-                    },
-                    {
-                      "Variable": "$.Request.ResourceProperties.TransitionToPrimaryStorageClass",
-                      "StringEquals": "NONE"
-                    }
-                  ],
-                  "Next": "Lifecycle None"
-                },
-                {
-                  "And": [
-                    {
-                      "Not": {
-                        "Variable": "$.Request.ResourceProperties.TransitionToIA",
-                        "StringEquals": "NONE"
-                      }
-                    },
-                    {
-                      "Not": {
-                        "Variable": "$.Request.ResourceProperties.TransitionToPrimaryStorageClass",
-                        "StringEquals": "NONE"
-                      }
-                    }
-                  ],
-                  "Next": "Lifecycle IA and Primary"
-                },
-                {
-                  "And": [
-                    {
-                      "Not": {
-                        "Variable": "$.Request.ResourceProperties.TransitionToIA",
-                        "StringEquals": "NONE"
-                      }
-                    },
-                    {
-                      "Variable": "$.Request.ResourceProperties.TransitionToPrimaryStorageClass",
-                      "StringEquals": "NONE"
-                    }
-                  ],
-                  "Next": "Lifecycle IA"
-                },
-                {
-                  "And": [
-                    {
-                      "Not": {
-                        "Variable": "$.Request.ResourceProperties.TransitionToPrimaryStorageClass",
-                        "StringEquals": "NONE"
-                      }
-                    },
-                    {
-                      "Variable": "$.Request.ResourceProperties.TransitionToIA",
-                      "StringEquals": "NONE"
-                    }
-                  ],
-                  "Next": "Lifecycle Primary"
-                }
-              ]
-            },
-            "Lifecycle None": {
+            "BuildLifecycleConfiguration": {
               "Type": "Task",
-              "Next": "Send success response",
+              "Resource": "arn:aws:states:::lambda:invoke",
               "Parameters": {
-                "FileSystemId.$": "$.Request.PhysicalResourceId",
-                "LifecyclePolicies": []
+                "Payload": {
+                  "TransitionToIA.$": "$.Request.ResourceProperties.TransitionToIA",
+                  "TransitionToPrimaryStorageClass.$": "$.Request.ResourceProperties.TransitionToPrimaryStorageClass"
+                },
+                "FunctionName.$": "$.BuildLifecycleConfigurationLambdaName"
+              },
+              "Retry": [
+                {
+                  "ErrorEquals": [
+                    "Lambda.ServiceException",
+                    "Lambda.AWSLambdaException",
+                    "Lambda.SdkClientException"
+                  ],
+                  "IntervalSeconds": 2,
+                  "MaxAttempts": 6,
+                  "BackoffRate": 2
+                }
+              ],
+              "Next": "PutLifecycleConfiguration",
+              "ResultPath": "$.BuildLifecycleConfigurationResult"
+            },
+            "PutLifecycleConfiguration": {
+              "Type": "Task",
+              "Next": "Send success created response",
+              "Parameters": {
+                "FileSystemId.$": "$.ConvertArnToIdResult.Payload",
+                "LifecyclePolicies.$": "$.BuildLifecycleConfigurationResult.Payload"
               },
               "Resource": "arn:aws:states:::aws-sdk:efs:putLifecycleConfiguration",
               "ResultPath": "$.LifecycleNoneResult"
             },
-            "Send success response": {
+            "Send success created response": {
+              "Type": "Task",
+              "Resource": "arn:aws:states:::lambda:invoke",
+              "Parameters": {
+                "FunctionName.$": "$.SendResponseLambdaName",
+                "Payload": {
+                  "Request.$": "$.Request",
+                  "ResponseStatus": "SUCCESS",
+                  "PhysicalResourceId.$": "$.ConvertArnToIdResult.Payload"
+                }
+              },
+              "Retry": [
+                {
+                  "ErrorEquals": [
+                    "Lambda.ServiceException",
+                    "Lambda.AWSLambdaException",
+                    "Lambda.SdkClientException"
+                  ],
+                  "IntervalSeconds": 2,
+                  "MaxAttempts": 6,
+                  "BackoffRate": 2
+                }
+              ],
+              "End": true
+            },
+            "Send success deleted response": {
               "Type": "Task",
               "Resource": "arn:aws:states:::lambda:invoke",
               "Parameters": {
@@ -351,23 +395,6 @@ Resources:
               ],
               "End": true
             },
-            "Lifecycle IA and Primary": {
-              "Type": "Task",
-              "Next": "Send success response",
-              "Parameters": {
-                "FileSystemId.$": "$.Request.PhysicalResourceId",
-                "LifecyclePolicies": [
-                  {
-                    "TransitionToIA.$": "$.Request.ResourceProperties.TransitionToIA"
-                  },
-                  {
-                    "TransitionToPrimaryStorageClass.$": "$.Request.ResourceProperties.TransitionToPrimaryStorageClass"
-                  }
-                ]
-              },
-              "Resource": "arn:aws:states:::aws-sdk:efs:putLifecycleConfiguration",
-              "ResultPath": "$.LifecycleIAAndPrimaryResult"
-            },
             "DeleteFileSystem": {
               "Type": "Task",
               "Parameters": {
@@ -375,35 +402,7 @@ Resources:
               },
               "Resource": "arn:aws:states:::aws-sdk:efs:deleteFileSystem",
               "ResultPath": "$.DeleteFileSystemResult",
-              "Next": "Send success response"
-            },
-            "Lifecycle IA": {
-              "Type": "Task",
-              "Next": "Send success response",
-              "Parameters": {
-                "FileSystemId.$": "$.Request.PhysicalResourceId",
-                "LifecyclePolicies": [
-                  {
-                    "TransitionToIA.$": "$.Request.ResourceProperties.TransitionToIA"
-                  }
-                ]
-              },
-              "Resource": "arn:aws:states:::aws-sdk:efs:putLifecycleConfiguration",
-              "ResultPath": "$.LifecycleIAResult"
-            },
-            "Lifecycle Primary": {
-              "Type": "Task",
-              "Next": "Send success response",
-              "Parameters": {
-                "FileSystemId.$": "$.Request.PhysicalResourceId",
-                "LifecyclePolicies": [
-                  {
-                    "TransitionToPrimaryStorageClass.$": "$.Request.ResourceProperties.TransitionToPrimaryStorageClass"
-                  }
-                ]
-              },
-              "Resource": "arn:aws:states:::aws-sdk:efs:putLifecycleConfiguration",
-              "ResultPath": "$.LifecyclePrimaryResult"
+              "Next": "Send success deleted response"
             }
           }
         } 
@@ -637,8 +636,9 @@ Resources:
                 input: JSON.stringify({
                   Request: event,
                   BackupRoleArn: process.env.BackupRoleArn,
-                  ArnToEfsIdLambdaArn: process.env.ArnToEfsIdLambdaArn,
-                  SendResponseLambdaName: process.env.SendResponseLambdaName
+                  ConvertArnToIdLambdaName: process.env.ConvertArnToIdLambdaName,
+                  SendResponseLambdaName: process.env.SendResponseLambdaName,
+                  BuildLifecycleConfigurationLambdaName: process.env.BuildLifecycleConfigurationLambdaName
                 }),
                 name: event.RequestId
             };
@@ -648,8 +648,9 @@ Resources:
         Variables:
           StateMachineArn: !Ref EfsStateMachine
           BackupRoleArn: !GetAtt BackupRole.Arn
-          ArnToEfsIdLambdaArn: !GetAtt ArnToEfsIdLambda.Arn
+          ConvertArnToIdLambdaName: !Ref ConvertArnToIdLambda
           SendResponseLambdaName: !Ref SendResponseLambda
+          BuildLifecycleConfigurationLambdaName: !Ref BuildLifecycleConfigurationLambda
       Role: !GetAtt CommonLambdaRole.Arn
       Runtime: nodejs14.x
       Handler: index.handler
@@ -686,7 +687,7 @@ Resources:
       Timeout: 30
 
   # Converts arn of the restored resource to file system id. 
-  ArnToEfsIdLambda:
+  ConvertArnToIdLambda:
     Type: 'AWS::Lambda::Function' 
     Condition: IsRestore
     Properties:
@@ -694,10 +695,35 @@ Resources:
         ZipFile: |
           exports.handler = async (event) => {
             let match = event.Arn.match(/file-system\/(.+)/) || [];
-            return {
-              EfsId: match[1]
-            };
+            return match[1];
           }
+      Role: !GetAtt CommonLambdaRole.Arn
+      Runtime: nodejs14.x
+      Handler: index.handler
+      Timeout: 30
+  
+  BuildLifecycleConfigurationLambda:
+    Type: 'AWS::Lambda::Function' 
+    Condition: IsRestore
+    Properties:
+      Code:
+        ZipFile: |
+          exports.handler = async (event) => {
+            var result = [];
+            if (event.TransitionToIA != "NONE")
+              result.push(
+                {
+                  TransitionToIA: event.TransitionToIA
+                }
+              );
+            if (event.TransitionToPrimaryStorageClass != "NONE")
+              result.push(
+                {
+                  TransitionToPrimaryStorageClass: event.TransitionToPrimaryStorageClass
+                }
+              );    
+            return result;
+          };
       Role: !GetAtt CommonLambdaRole.Arn
       Runtime: nodejs14.x
       Handler: index.handler
