--- a/sample.yaml
+++ b/sample.yaml
@@ -73,7 +73,7 @@ Resources:
               yum install -y amazon-efs-utils
               mkdir /home/ec2-user/efs 
               mount -t efs -o tls,accesspoint=${AccessPoint} ${EFS}:/ /home/ec2-user/efs            
-            - EFS: !GetAtt Efs.Outputs.Efs   
+            - EFS: !GetAtt Efs.Outputs.FileSystemId   
   
   EC2SecurityGroup:
     Type: AWS::EC2::SecurityGroup
