--- a/template.yaml
+++ b/template.yaml
@@ -870,5 +870,7 @@ Resources:
       SubnetId: !Ref Subnet     
 
 Outputs:
-  Efs:
+  FileSystemId:
     Value: !If [IsEmpty, !Ref EmptyEfs, !Ref RecoveredEfs]
+  Arn:
+    Value: !If [IsEmpty, !GetAtt EmptyEfs.Arn, !GetAtt RecoveredEfs.Arn]
